# a_stack_of_dishes

./: CMakeLists.txt  README.md  main.cpp
src/: dish.hpp  dish_stack.cpp  dish_stack.hpp
tests/: dish_stack_test.cpp
